repo-to-md/src/snapshots/review_to_md__tests__cli_end_to_end__apply_force_file_content.snap
---
source: repo-to-md/src/tests.rs
expression: content
snapshot_kind: text
---
fn main() {
    let x = 1;
    // <review>
    // Consider renaming x
    // </review>
}
