repo-to-md/src/snapshots/review_to_md__tests__cli_end_to_end__issue_command_auto_detect_repo.snap
---
source: repo-to-md/src/tests.rs
expression: output_str
snapshot_kind: text
---
# Issue #99: Feature request


## Description

Please add this feature.
