repo-to-md/src/snapshots/review_to_md__tests__cli_end_to_end__issue_command_simple.snap
---
source: repo-to-md/src/tests.rs
expression: output_str
snapshot_kind: text
---
# Issue #42: Fix the bug


## Description

This is a bug that needs fixing.
