repo-to-md/src/snapshots/review_to_md__tests__cli_end_to_end__review_command_with_pr_and_review_id.snap
---
source: repo-to-md/src/tests.rs
expression: output_str
---
# Pull Request Review Comments

Please address the following review comments:

## `src/lib.rs` - Lines 8-11

```rust
fn main() {
    println!("Hello");
    let x = 42;
// <review user="reviewer">
// This should return a Result instead
// </review>
}
```
