repo-to-md/src/snapshots/review_to_md__tests__cli_end_to_end__review_command_with_review_id.snap
---
source: repo-to-md/src/tests.rs
assertion_line: 604
expression: output_str
---
# Review comments

Please address the following review comments. The comments are given as inline
comments inside code blocks. They use the comment format of the language of the
commented file. Each comment is wrapped in "<review>" tags.

For example, a Rust file may look like:

```rust
fn main() {
    println!("13");
    // <review>
    // Please use 42 as the number
    // </review>
}
```

## `src/lib.rs` - Lines 8-11

```rust
fn main() {
    println!("Hello");
    let x = 42;
    // <review>
    // This should return a Result instead
    // </review>
}
```
