repo-to-md/src/snapshots/review_to_md__tests__cli_end_to_end__review_format_command_treats_non_existing_positional_as_pr_number.snap
---
source: repo-to-md/src/tests.rs
assertion_line: 829
expression: output_str
---
# Review comments

Please address the following review comments. The comments are given as inline
comments inside code blocks. They use the comment format of the language of the
commented file. Each comment is wrapped in "<review>" tags.

For example, a Rust file may look like:

```rust
fn main() {
    println!("13");
    // <review>
    // Please use 42 as the number
    // </review>
}
```

## `src/lib.rs` - Lines 8-11

```rust
fn main() {
    println!("Hello");
    let x = 42;
    // <review>
    // Positional PR review comment
    // </review>
}
```
